--- a/project.config.json
+++ b/project.config.json
@@ -41,7 +41,7 @@
   "compileType": "miniprogram",
   "libVersion": "2.2.3",
   "appid": "wx132bb522ad967270",
-  "projectname": "interact",
+  "projectname": "modal",
   "debugOptions": {
     "hidedInDevtools": []
   },
