--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "Interact",
+    "navigationBarTitleText": "modal",
     "navigationBarTextStyle": "black"
   },
   "style": "v2",
