--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@mini-dev/modal",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "miniapp modal component",
+  "miniprogram": "libs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
